--- a/index.html
+++ b/index.html
@@ -8,25 +8,19 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
-
-<body class="container">
-	
-		<h1>Шкаф</h1>
-		<h2>Обо мне</h2>
-		<div class="item">
-			<img class="photo" src="me.png" width="500" height="500" alt="фото шкафа">
-		</div>
-
-			<p>такой я красивый</p>
-
-			<h2>Контакты</h2>
-
-			<div class="contacts">
-				<a>topster.mel@yandex.ru</a>
-			</div>
-				<button type="button">открыть шкаф</button>
+<body>
+	<h2>Шкаф<br>очень красивый<br>
+<img class="photo" src="img/shkaf1.png" width="300" height="400" alt="фото шкафа">
+	</h2>
+	<h4>и вместительный</h4>
+	<button type="button">открыть</button>
 				<script type="text/javascript" src="js.js"></script>
-
+	<table border="1" width="100%" cellspacing="0">
+		<tr><td><b>Что же тут</b></td>
+			<td>Ничего</td></tr>
+			<tr><td><b>А здесь</b></td>
+			<td>Тоже пусто</td></tr>
+	</table>
+	<h2>Контакты</h2>
+	<h4>Ev.Markova.00@inbox.ru</h4>
 </body>
-
-</html>
