--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-	<h1>hi</h1>
+	<h1>hihihi</h1>
 	<h2>Шкаф<br>очень красивый<br>
 <img class="photo" src="img/shkaf1.png" width="300" height="400" alt="фото шкафа">
 	</h2>
